[gd_scene load_steps=25 format=3 uid="uid://juku72fh3dl0"]

[ext_resource type="Script" path="res://Scripts/NPCs/Fighter/fighter_npc.gd" id="1_hmqk0"]
[ext_resource type="PackedScene" uid="uid://bnfrjatb6prnb" path="res://Assets/Particles/explosion.tscn" id="2_l8ark"]
[ext_resource type="PackedScene" uid="uid://dappypoft2ab4" path="res://Assets/Particles/vfx_explosion_lelu_8x.tscn" id="3_5mmgf"]
[ext_resource type="PackedScene" uid="uid://d33fc5p10x7j7" path="res://Scenes/hit_feedback.tscn" id="3_qm2p0"]
[ext_resource type="PackedScene" uid="uid://b5exo1u3hem8p" path="res://Scenes/Guns/gun.tscn" id="4_57m73"]
[ext_resource type="PackedScene" uid="uid://c5a4dsie0n5u6" path="res://Scenes/weapon_handler.tscn" id="4_dhpb0"]
[ext_resource type="PackedScene" uid="uid://034dpfhar4p4" path="res://Scenes/health_component.tscn" id="5_1xytm"]
[ext_resource type="PackedScene" uid="uid://6aihaxnn6c6p" path="res://Scenes/Projectiles/bullet_ray_basic.tscn" id="5_6ou5s"]
[ext_resource type="PackedScene" uid="uid://dt8e8r0ew3fjn" path="res://Scenes/Projectiles/missile.tscn" id="5_70fr4"]
[ext_resource type="PackedScene" uid="uid://dc6ukdkam24n" path="res://Scenes/hit_box_component.tscn" id="6_ne5o5"]
[ext_resource type="PackedScene" uid="uid://dpv3fsfu1trkj" path="res://Scenes/MovementControllers/npc_fighter_controller.tscn" id="9_0cpbp"]
[ext_resource type="PackedScene" uid="uid://dfni57jntnnk8" path="res://Scenes/missile_lock_group.tscn" id="17_563f5"]
[ext_resource type="PackedScene" uid="uid://cvpd2ioksubgy" path="res://Assets/Ships/fighter_chassis_ring.tscn" id="19_x2ba7"]
[ext_resource type="PackedScene" uid="uid://cp4m6n403qink" path="res://Scenes/aim_assist.tscn" id="19_xjc2u"]
[ext_resource type="PackedScene" uid="uid://ch30rmws7v08k" path="res://Scenes/contrail.tscn" id="20_a8xhu"]
[ext_resource type="PackedScene" uid="uid://cruqo01kbn3ab" path="res://Scenes/shield.tscn" id="23_fxr37"]
[ext_resource type="PackedScene" uid="uid://d3erdmulqy1l2" path="res://Assets/Particles/major_damage.tscn" id="24_a0vwa"]
[ext_resource type="Shader" uid="uid://bm3gcg5xbsv0" path="res://Assets/Shaders/FresnelAura.tres" id="24_ovt4a"]
[ext_resource type="PackedScene" uid="uid://b70y8labc000a" path="res://Assets/Particles/major_damage_line_sparks.tscn" id="25_ij4bf"]
[ext_resource type="PackedScene" uid="uid://dk37kibucmpd0" path="res://Assets/Particles/mild_damage.tscn" id="26_mibdx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rh3fl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ydoww"]
radius = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6dy1g"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("24_ovt4a")
shader_parameter/FresnelPower = 2.0
shader_parameter/EmissionStrength = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_6a830"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_6dy1g")

[node name="FighterNPC" type="CharacterBody3D"]
transform = Transform3D(1, -4.37114e-08, 0, 4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 0, 0, 0)
motion_mode = 1
script = ExtResource("1_hmqk0")
deathExplosion = ExtResource("2_l8ark")
finalExplosion = ExtResource("3_5mmgf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.31134e-07, -1.31134e-07, -1, 1, 8.74228e-08, 1.31134e-07, 8.74228e-08, -1, 1.31134e-07, 0, 0, 0)
shape = SubResource("SphereShape3D_rh3fl")

[node name="WeaponHandler" parent="." instance=ExtResource("4_dhpb0")]

[node name="Gun" parent="WeaponHandler" node_paths=PackedStringArray("collision_exception1", "collision_exception2") instance=ExtResource("4_57m73")]
transform = Transform3D(1, 8.35188e-23, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.2)
bullet = ExtResource("5_6ou5s")
bullet_speed = 600.0
fire_rate = 8.0
collision_exception1 = NodePath("../../HitBoxComponent")
collision_exception2 = NodePath("../../Shield/HitBoxComponent")

[node name="HitFeedback" parent="." instance=ExtResource("3_qm2p0")]

[node name="HealthComponent" parent="." instance=ExtResource("5_1xytm")]
max_health = 20

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("health_component", "hit_feedback") instance=ExtResource("6_ne5o5")]
health_component = NodePath("../HealthComponent")
hit_feedback = NodePath("../HitFeedback")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="HitBoxComponent"]
shape = SubResource("SphereShape3D_ydoww")

[node name="DebugLabel" type="Label3D" parent="."]
visible = false
billboard = 1
fixed_size = true

[node name="FighterChassisRing" parent="." instance=ExtResource("19_x2ba7")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 1)

[node name="Contrail" parent="." instance=ExtResource("20_a8xhu")]

[node name="Shield" parent="." instance=ExtResource("23_fxr37")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)

[node name="FresnelAura" parent="Shield" index="0"]
mesh = SubResource("SphereMesh_6a830")

[node name="DamageEmitters" type="Node3D" parent="."]

[node name="MajorDamage" parent="DamageEmitters" instance=ExtResource("24_a0vwa")]

[node name="MajorDamageLineSparks" parent="DamageEmitters" instance=ExtResource("25_ij4bf")]

[node name="MildDamage" parent="DamageEmitters" instance=ExtResource("26_mibdx")]

[node name="NPCFighterStateMachine" parent="." instance=ExtResource("9_0cpbp")]
shooting_angle_degrees = null
speed = null
pitch_amt = null
roll_amt = null
yaw_amt = null
speed_lerp = null
lerp_str = null

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="MissileLauncher" parent="." instance=ExtResource("4_57m73")]
bullet = ExtResource("5_70fr4")
damage = 10.0
bullet_speed = 150.0
bullet_timeout = 5.0
fire_rate = 0.033

[node name="MissileLockGroup" parent="." node_paths=PackedStringArray("missile_launcher") instance=ExtResource("17_563f5")]
npc_missile_lock = true
missile_launcher = NodePath("../MissileLauncher")
missile_range = 1000.0

[node name="AimAssist" parent="." instance=ExtResource("19_xjc2u")]
angle_assist_limit = 10.0

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_lost" from="HealthComponent" to="." method="_on_health_component_health_lost"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]

[editable path="Shield"]
